# gba-playground

./: .gitignore  Cargo.toml  README.md  prompt.md  run_ci.sh  story-board.md
.cargo/: config.toml
scripts/: asset_description.toml  generate_sprit.py  generate_sprites.py  genereate_pixel_art.py  main_convert_sprites.py  main_generate_pitch2rate.py  main_generate_reg_tune_rs.py  main_generate_tune_rs.py  multi_agent_sprite_generator.py  pyproject.toml  resize_file_512_to_32.py  test_enhanced_agents.py  test_enhanced_iteration.py  test_imports.py  test_modular_system.py  utils.py  vision_enhanced_multi_agent.py
scripts/egjtools/: main.py  multi_agent_system.py  prompt_refiner.py  toml.py  transparency_processor.py
scripts/epjtools/: __init__.py  img.py  main.py  prompt_condenser.py  sprite_generator.py  vision_evaluator.py
scripts/multi_agent_output/: dragon_32x32.json  orc_32x32.json  potion_16x16.json  wizard_32x32.json
scripts/remote/: mg.mGBA-MASTER.amxd  mg.mGBA-Remote.amxd  mg.mGBA-TONE1.amxd  mgba_server.lua  mmio.js  mmio.py  sound_ToneFrequency.js  synth_client.js  synth_client.py  udp_to_tcp.py
scripts/remote/maxGBA/: mg.mGBA-MASTER.amxd  mg.mGBA-TONE1.amxd  mg.mGBA-TONE2.amxd  mmio.js  sound_ToneFrequency.js  sound_TonePattern.js
scripts/remote/pyGBA/: bridge_in_the_middle.py  generate_reg_tune_rs.py  main_bridge_in_the_middle.py  main_logger.py  mmio.py  sound.py  synth_client.py
scripts/vision_output/: dragon_32x32.json  potion_16x16.json  test_enhanced_potion.json  test_modular_potion.json  test_potion_enhanced.json  wizard_32x32.json
(+80 files in other folders)
