[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Emmanuel Girardin <emmanuel.girardin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
miditoolkit = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
